--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -9716,8 +9716,8 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #4e73df;
-  background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
+  background-color: #858796;
+  background-image: linear-gradient(180deg, #02030cad 10%, #858796 100%);
   background-size: cover;
 }
 
@@ -10249,7 +10249,6 @@ a:focus {
 }
 
 .sidebar .sidebar-brand {
-  height: 4.375rem;
   text-decoration: none;
   font-size: 1rem;
   font-weight: 800;
