--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -11045,3 +11045,7 @@ footer.sticky-footer .copyright {
 body.sidebar-toggled footer.sticky-footer {
   width: 100%;
 }
+
+#dropdownMenu2 {
+  float: right;
+}
