added translate btn

--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -2393,8 +2393,8 @@ fieldset:disabled a.btn {
 
 .btn-info {
   color: #fff;
-  background-color: #36b9cc;
-  border-color: #36b9cc;
+  background-color: #6b6d7d;
+  border-color: #6b6d7d;
 }
 
 .btn-info:hover {
